src/test/deca/context/invalid/SansObjet/DeclVar-EQ-int-boolean-boolean.deca
// Description:
//    Declaration of a int variable using == operation between a boolean variable and boolean .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  true; 
    boolean y = false; 
    int z = x == y ; 
}
